--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <title>Project page</title>
-<link rel="stylesheet" href="style.css" type="text/css" />
+<link rel="stylesheet" href="contact.css" type="text/css" />
 </head>
 <body>
 <div id="header"> 	
-<div id="logo"><a href="Homepage.html"> <img src="picture/drag_x-logo.png" width="250px"/></a> </div>
+<div id="logo"><a href="index.html"> <img src="picture/drag_x-logo.png" width="250px"/></a> </div>
 		<div id="nav">
 
 				<ul>
-					<li><a href="Homepage.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="project.html">Project</a></li>
 					<li><a href="contact.html">Contact</a></li>
@@ -19,16 +19,18 @@
 
 		</div>
 
-	</div>
-
-<h1>Contact Us</h1>
 
 
+<h1>Contact ME @</h1>
 
+<div id="icons">
+<a href="https://www.facebook.com/luke.capuras/"><img src="picture/luke/Fblogo.png"/></a> <a href="https://github.com/Carma6478"><img src="picture/luke/github.png"/></a> <a href="kristoffer.capuras@gmail.com"><img src="picture/luke/gmail.png"/></a> <a href="https://www.linkedin.com/in/luke-capuras-a32b89239/"><img src="picture/luke/linkedin.png"/></a> <a href="kristoffer.capuras@dlsau.edu.ph"><img src="picture/luke/outlook.png"/></a>
+</div>
+<br><br><br>
 <div id="wrapper"> 
 
-<div id="footer">&copy2020 DC Aeroponics Inc.. All Rights Reserved.</div>
+<div id="footer">&copy2023 Drag_X Porfolio.. All Rights Reserved.</div>
 </div>
-
+	</div>
 </body>
 </html>
