--- a/Portfolio/project.html
+++ b/Portfolio/project.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div id="header"> 	
-<div id="logo"><a href="Homepage.html"> <img src="picture/drag_x-logo.png" width="250px"/></a> </div>
+<div id="logo"><a href="index.html"> <img src="picture/drag_x-logo.png" width="250px"/></a> </div>
 		<div id="nav">
 
 				<ul>
-					<li><a href="Homepage.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">Others</a></li>
 					<li><a href="project.html">Project</a></li>
 					<li><a href="contact.html">Contact</a></li>
@@ -155,7 +155,7 @@ Sadly i dont have any documentation on this project since its been 3 years since
 	</tr>
 </table>
 
-<div id="footer">&copy2020 DC Aeroponics Inc.. All Rights Reserved.</div>
+<div id="footer">&copy2023 Drag_X Porfolio.. All Rights Reserved.</div>
 </div>
 </div>
 </body>
